state data pull updates

--- a/montana_covid_data.Rmd
+++ b/montana_covid_data.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "State of Montana Covid-19 R-values"
 author: "Ethan Walker"
-date: "Data as of April 18, 2020"
+date: "Data as of April 19, 2020"
 output:
   pdf_document: default
   html_document:
@@ -31,7 +31,7 @@ library(epitrix)
 library(jsonlite)
 library(httr)
 library(rlist)
-library(taskscheduleR)
+library(Rsftp)
 cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", 
                "#0072B2", "#D55E00", "#CC79A7")
 ```
@@ -121,7 +121,19 @@ ggsave("state_plot.png")
 
 colomns <- c(1:4, 8)
 state_r <- (state_results$R[,colomns]) %>% 
-   mutate(region = "state")
+   mutate(region = "state") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+state_dates <- as.data.frame(state_results$dates)
+state_i <- as.data.frame(state_results$I)
+state_dates_new <- cbind(state_dates, state_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+state_dates_new <- state_dates_new[-(1:7), 1:2]
+state_r_clean <- cbind(state_r, state_dates_new)
 
 
 ## Reg1 results
@@ -140,7 +152,19 @@ ggsave("reg1_plot.png")
 
 colomns <- c(1:4, 8)
 reg1_r <- (reg1_results$R[,colomns]) %>% 
-   mutate(region = "1")
+   mutate(region = "1") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+reg1_dates <- as.data.frame(reg1_results$dates)
+reg1_i <- as.data.frame(reg1_results$I)
+reg1_dates_new <- cbind(reg1_dates, reg1_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+reg1_dates_new <- reg1_dates_new[-(1:7), 1:2]
+reg1_r_clean <- cbind(reg1_r, reg1_dates_new)
 
 
 ## Reg2 results
@@ -159,7 +183,19 @@ ggsave("reg2_plot.png")
 
 colomns <- c(1:4, 8)
 reg2_r <- (reg2_results$R[,colomns]) %>% 
-   mutate(region = "2")
+   mutate(region = "2") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+reg2_dates <- as.data.frame(reg2_results$dates)
+reg2_i <- as.data.frame(reg2_results$I)
+reg2_dates_new <- cbind(reg2_dates, reg2_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+reg2_dates_new <- reg2_dates_new[-(1:7), 1:2]
+reg2_r_clean <- cbind(reg2_r, reg2_dates_new)
 
 
 ## Reg3 results
@@ -178,7 +214,19 @@ ggsave("reg3_plot.png")
 
 colomns <- c(1:4, 8)
 reg3_r <- (reg3_results$R[,colomns]) %>% 
-   mutate(region = "3")
+   mutate(region = "3") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+reg3_dates <- as.data.frame(reg3_results$dates)
+reg3_i <- as.data.frame(reg3_results$I)
+reg3_dates_new <- cbind(reg3_dates, reg3_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+reg3_dates_new <- reg3_dates_new[-(1:7), 1:2]
+reg3_r_clean <- cbind(reg3_r, reg3_dates_new)
 
 
 ## Reg4 results
@@ -197,7 +245,19 @@ ggsave("reg4_plot.png")
 
 colomns <- c(1:4, 8)
 reg4_r <- (reg4_results$R[,colomns]) %>% 
-   mutate(region = "4")
+   mutate(region = "4") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+reg4_dates <- as.data.frame(reg4_results$dates)
+reg4_i <- as.data.frame(reg4_results$I)
+reg4_dates_new <- cbind(reg4_dates, reg4_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+reg4_dates_new <- reg4_dates_new[-(1:7), 1:2]
+reg4_r_clean <- cbind(reg4_r, reg4_dates_new)
 
 
 ## Reg5 results
@@ -216,14 +276,40 @@ ggsave("reg5_plot.png")
 
 colomns <- c(1:4, 8)
 reg5_r <- (reg5_results$R[,colomns]) %>% 
-   mutate(region = "5")
+   mutate(region = "5") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+reg5_dates <- as.data.frame(reg5_results$dates)
+reg5_i <- as.data.frame(reg5_results$I)
+reg5_dates_new <- cbind(reg5_dates, reg5_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+reg5_dates_new <- reg5_dates_new[-(1:7), 1:2]
+reg5_r_clean <- cbind(reg5_r, reg5_dates_new)
 
 
 
 # Bind files and save
-all_regions_r <- rbind(state_r, reg1_r, reg2_r, reg3_r, reg4_r, reg5_r)
+all_regions_r <- rbind(state_r_clean, reg1_r_clean, reg2_r_clean, reg3_r_clean, 
+                       reg4_r_clean, reg5_r_clean)
 
 write_csv(all_regions_r, "all_regions_r.csv")
+```
+
+```{r, eval=FALSE, include=FALSE}
+# Send it to the sftp server
+# host = 'elbastion.dbs.umt.edu'
+# port = 22
+# username = 'celftp'
+# password  = 'celftp'
+# remotepath = '/celFtpFiles/covid19/Rt/incoming/'
+
+sftpUpload("elbastion.dbs.umt.edu", "celftp", "celftp",
+           "/celFtpFiles/covid19/Rt/incoming/all_regions_r.csv",
+           "C:/R/covid19/state_daily_results/all_regions_r.csv")
 ```
 
 ```{r}
